[package]
name = "gltf_arc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
bytes = "1.11.1"
glam = "0.32.1"
gltf_types = { workspace = true }
gltf_io = { workspace = true }
ordered-float = "5.3.0"
resource_io = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
iri-string = "0.7.12"
tokio = { version = "1.52.1", features = ["rt", "macros"] }
