[package]
name = "gltf_io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
gltf_types = { workspace = true }
iri-string = "0.7.12"
resource_io = { workspace = true }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt", "macros"] }
