[package]
name = "owt_streaming_service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["embedded-viewer"]
embedded-viewer = []

[dependencies]
anyhow = "1.0.102"
async-recursion = "1.1.1"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["default", "macros"] }
blake3 = "1.8.4"
bytes = "1.11.1"
bytesize = "2.3.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.32"
geojson = "1.0.0"
glam = "0.32.1"
humantime = "2.3.0"
iref = "4.0.0"
iri-string = "0.7.12"
mime_guess = "2.0.5"
moka = { version = "0.12.15", features = ["future"] }
regex = "1.12.3"
resource_io = { workspace = true }
rust-embed = "8.11.0"
s2 = "0.0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terrarium = { workspace = true }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
transforms = { workspace = true}
gltf_arc = { workspace = true}
gltf_types = { workspace = true}
gltf_io = { workspace = true}
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
axum-prometheus = "0.10.0"
